--- a/Javascript Tetris.html
+++ b/Javascript Tetris.html
@@ -41,7 +41,7 @@
  
    <div id="stats" style="cursor: pointer; 
 width: 80px; opacity: 0.9; z-index: 10001;">
-<div style="backgound-color: rgb(8, 8, 24); 
+<div style="background-color: rgb(8, 8, 24); 
 padding: 2px 0px 3px;"><div style="font-family: Helvetica, Arial, sans-serif; text-align: left; 
 font-size: 9px; color: rgb(0, 255, 255); margin: 0px 0px 0px 0px;"><span style="font-weight:bold">
 </span></div><canvas width="74" height="30" style="display: block; margin-left: 3px;"></canvas></div><div style="background-color: rgb(8, 24, 8); padding: 2px 0px 3px; display: none;"><div style="font-family: Helvetica, Arial, sans-serif; text-align: left; font-size: 9px; color: rgb(0, 255, 0); margin: 0px 0px 1px 3px;"><span style="font-weight:bold"></span> (1-63590)</div><canvas width="74" height="30" style="display: block; margin-left: 3px;"></canvas></div><div style="background-color: rgb(24, 8, 13); padding: 2px 0px 3px; display: none;"><div style="font-family: Helvetica, Arial, sans-serif; text-align: left; font-size: 9px; color: rgb(255, 0, 128); margin: 0px 0px 1px 3px;"><span style="font-weight:bold"></span> </div><canvas width="74" height="30" style="display: block; margin-left: 3px;"></canvas></div></div></div>
